--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "author": "Tom Wilson <tom@hyper.io>",
   "license": "MIT",
   "devDependencies": {
-    "@verto/component": "^0.1.1",
     "arweave": "^1.11.4",
     "esbuild": "^0.14.53",
     "replace-in-file": "^6.3.5",
@@ -15,5 +14,8 @@
   },
   "scripts": {
     "build": "node build.js"
+  },
+  "dependencies": {
+    "@verto/flex": "^0.1.1"
   }
 }
